--- a/application/templates/store/readyorder.html
+++ b/application/templates/store/readyorder.html
@@ -35,7 +35,7 @@
             {% else %}
               {{ form1.hidden_tag() }}
               {{ form1.status(class='form-control') }}
-              {{ form1.submit(class='btn') }}
+              {{ form1.submit(class='btn bg-success') }}
             {% endif %}
           </form>
         </td>
@@ -43,7 +43,7 @@
         <td>{{ order.user.email | e }}</td>
         <td>{{ order.location }}</td>
         <td>
-          <button class="btn" onclick="window.location.href='{{ url_for('store.userorders', order_id=order.id) }}'">
+          <button class="btn bg-success" onclick="window.location.href='{{ url_for('store.userorders', order_id=order.id) }}'">
             View Details
           </button>
         </td>
