--- a/application/templates/store/add_delivery.html
+++ b/application/templates/store/add_delivery.html
@@ -21,7 +21,7 @@
             {{ form.password(class="form-control") }}
         </div>
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-outline-primary rounded-pill">Submit</button>
+        <button type="submit" class="btn btn-outline-success rounded-pill">Done</button>
     </form>
 
     <!-- Back to Products Page -->
