--- a/application/templates/store/addstaff.html
+++ b/application/templates/store/addstaff.html
@@ -26,7 +26,7 @@
             {{ form.password(class="form-control") }}
         </div>
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-outline-primary rounded-pill">Add staff</button>
+        <button type="submit" class="btn btn-outline-success rounded-pill">Add staff</button>
     </form>
 
     <!-- Back to Products Page -->
