--- a/application/templates/store/updatedetails.html
+++ b/application/templates/store/updatedetails.html
@@ -20,7 +20,7 @@
             {{ form.mpesacode(class="form-control") }}
         </div>
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-outline-primary rounded-pill">Update</button>
+        <button type="submit" class="btn btn-outline-success rounded-pill">Update</button>
     </form>
 </div>
 {%endblock%}
