--- a/application/templates/auth/register.html
+++ b/application/templates/auth/register.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="mb-3">
-                  <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
+                  <button class="btn btn-success d-grid w-100" type="submit">Sign in</button>
                 </div>
               </form>
             </div>
