--- a/application/templates/auth/registerphar.html
+++ b/application/templates/auth/registerphar.html
@@ -35,7 +35,7 @@
                         {% endif %}
                     </div>
                 {% endfor %}
-                <button class="btn btn-primary d-grid w-100">Submit</button>
+                <button class="btn btn-success d-grid w-100">Submit</button>
               </form>
             </div>
           </div>
