--- a/application/templates/delivery/updated_acc.html
+++ b/application/templates/delivery/updated_acc.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "deliverylayout.html" %}
 {% block title %}Profile - SmartEats {% endblock %}
 {% block content %}
     <style>
