--- a/application/templates/deliverylayout.html
+++ b/application/templates/deliverylayout.html
@@ -119,8 +119,9 @@
   <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
       <div class="container">
-        <img style="height:20%; width:10%;" src="/static/css/images/worka.png"/>
-
+<img src="/static/css/images/worka.png" 
+     style="max-height: 80px; width: auto; height: auto;" 
+     class="img-fluid"/>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
