--- a/application/templates/errorlayout.html
+++ b/application/templates/errorlayout.html
@@ -123,8 +123,9 @@
   <header style="background-color: none;">
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
       <div class="container">
-        <img style="height:20%; width:10%;" src="/static/css/images/worka.png" alt="SmartEats Logo"/>
-        <br>
+<img src="/static/css/images/worka.png" 
+     style="max-height: 80px; width: auto; height: auto;" 
+     class="img-fluid"/>        <br>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
