--- a/application/templates/errorlayout.html
+++ b/application/templates/errorlayout.html
@@ -73,6 +73,16 @@
       100% { transform: translate(-50%, -50%) rotate(360deg); }
     }
 
+    .logo {
+    max-height: 80px;
+    height: auto;
+    width: auto;
+}
+@media (max-width: 768px) {
+    .logo {
+        max-height: 60px; /* smaller on mobile */
+    }
+}
     /* Dropdown and Header */
     .dropdown {
       position: relative;
