--- a/application/templates/deliverylayout.html
+++ b/application/templates/deliverylayout.html
@@ -109,6 +109,16 @@
     .show {
       display: block;
     }
+    .logo {
+    max-height: 80px;
+    height: auto;
+    width: auto;
+}
+@media (max-width: 768px) {
+    .logo {
+        max-height: 60px; /* smaller on mobile */
+    }
+}
   </style>
 </head>
 
