--- a/application/templates/adminlayout.html
+++ b/application/templates/adminlayout.html
@@ -155,6 +155,12 @@
 
             <!-- Inventory -->
             <div class="sidebar-heading">Inventory Management</div>
+                <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('store.vendor_analytics') }}">
+                    <i class="fas fa-user-plus"></i>
+                    <span>Analytics</span>
+                </a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('store.products') }}">
                     <i class="fas fa-th-list"></i>
