--- a/application/templates/adminslayout.html
+++ b/application/templates/adminslayout.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>{% block title %}{{ current_user.name }} {% endblock %}</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='worka.png')}}">
 
     <!-- Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sb-admin-2.min.css') }}">
