--- a/application/templates/deliverylayout.html
+++ b/application/templates/deliverylayout.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/site.css')}}"/>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/adminstyles.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/_Layout.css')}}"/>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='worka.png')}}">
 
   <!-- ✅ Pace.js (SmartEats Loader) -->
   <link rel="stylesheet" href="{{ url_for('static', filename='lib/pace/themes/green/pace-theme-minimal.css') }}">
