--- a/application/templates/errorlayout.html
+++ b/application/templates/errorlayout.html
@@ -12,6 +12,7 @@
       {% endif %}
     {% endblock %}
   </title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico')}}">
 
   <!-- Fonts & Styles -->
   <link href="{{url_for('static', filename='css/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
