--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -12,7 +12,7 @@
         {% endif %}
     {% endblock %}
 </title>
-
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='worka.png')}}">
     <link href="{{url_for('static', filename='css/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/dist/css/bootstrap.min.css')}}"/>
